--- a/ChuckNorrisApp/Podfile
+++ b/ChuckNorrisApp/Podfile
@@ -8,5 +8,6 @@ target 'ChuckNorrisApp' do
   # Pods for ChuckNorrisApp
   pod 'Alamofire', '~> 5.4'
   pod 'Kingfisher', '~> 6.0'
+	pod 'SwiftLint', '~> 0.42'
 
 end
